--- a/Example_ProductBrowser/Base.lproj/Main.storyboard
+++ b/Example_ProductBrowser/Base.lproj/Main.storyboard
@@ -65,6 +65,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xSz-KW-PZa">
+                                <rect key="frame" x="0.0" y="64" width="375" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="XUK-OW-orp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Ep-pK-nnS">
                                 <rect key="frame" x="0.0" y="114" width="375" height="333.5"/>
                                 <subviews>
@@ -97,28 +106,45 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="TqB-dr-eFw">
                                 <rect key="frame" x="177" y="79" width="20" height="20"/>
                             </activityIndicatorView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xSz-KW-PZa">
-                                <rect key="frame" x="0.0" y="64" width="375" height="50"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="445-aF-0oA">
+                                <rect key="frame" x="0.0" y="617" width="375" height="50"/>
+                                <color key="backgroundColor" red="0.20000000000000001" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="XUK-OW-orp"/>
+                                    <constraint firstAttribute="height" constant="50" id="xap-zf-4yS"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <state key="normal">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="bagTap" destination="kZS-05-92c" eventType="touchUpInside" id="aQg-wJ-xAP"/>
+                                </connections>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="lVj-Ka-vWk">
+                                <rect key="frame" x="0.0" y="447.5" width="375" height="169.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="2Ep-pK-nnS" secondAttribute="trailing" id="3iu-2N-0XL"/>
                             <constraint firstItem="2Ep-pK-nnS" firstAttribute="leading" secondItem="QtE-2s-AYR" secondAttribute="leading" id="3wW-mY-WXh"/>
                             <constraint firstItem="xSz-KW-PZa" firstAttribute="top" secondItem="Vfj-yL-tDH" secondAttribute="bottom" id="67U-Df-ygo"/>
+                            <constraint firstAttribute="trailing" secondItem="445-aF-0oA" secondAttribute="trailing" id="74R-lN-tdR"/>
+                            <constraint firstAttribute="trailing" secondItem="lVj-Ka-vWk" secondAttribute="trailing" id="7Z3-uE-wJZ"/>
                             <constraint firstItem="xSz-KW-PZa" firstAttribute="leading" secondItem="QtE-2s-AYR" secondAttribute="leading" id="7ly-9o-GaG"/>
+                            <constraint firstItem="lVj-Ka-vWk" firstAttribute="top" secondItem="2Ep-pK-nnS" secondAttribute="bottom" id="8aC-Y0-OMG"/>
+                            <constraint firstItem="lVj-Ka-vWk" firstAttribute="leading" secondItem="QtE-2s-AYR" secondAttribute="leading" id="8mT-Ed-77t"/>
+                            <constraint firstItem="bew-mq-Qz0" firstAttribute="top" secondItem="445-aF-0oA" secondAttribute="bottom" id="BDC-yS-XoB"/>
                             <constraint firstItem="TqB-dr-eFw" firstAttribute="centerX" secondItem="xSz-KW-PZa" secondAttribute="centerX" id="EMX-A6-WR4"/>
                             <constraint firstItem="2Ep-pK-nnS" firstAttribute="top" secondItem="xSz-KW-PZa" secondAttribute="bottom" id="Fv8-ex-4lB"/>
                             <constraint firstItem="2Ep-pK-nnS" firstAttribute="height" secondItem="QtE-2s-AYR" secondAttribute="height" multiplier="0.5" id="Ohd-88-muX"/>
                             <constraint firstItem="rou-vc-84F" firstAttribute="width" secondItem="QtE-2s-AYR" secondAttribute="width" id="SWG-Fu-F0t"/>
+                            <constraint firstItem="445-aF-0oA" firstAttribute="top" secondItem="lVj-Ka-vWk" secondAttribute="bottom" id="TZ1-Ij-G8Z"/>
                             <constraint firstAttribute="trailing" secondItem="xSz-KW-PZa" secondAttribute="trailing" id="VC3-jC-nWP"/>
                             <constraint firstItem="rou-vc-84F" firstAttribute="width" secondItem="QtE-2s-AYR" secondAttribute="width" id="dc4-Mv-Fju"/>
+                            <constraint firstItem="445-aF-0oA" firstAttribute="leading" secondItem="QtE-2s-AYR" secondAttribute="leading" id="xrP-73-r30"/>
                             <constraint firstItem="TqB-dr-eFw" firstAttribute="centerY" secondItem="xSz-KW-PZa" secondAttribute="centerY" id="yGQ-F0-bPM"/>
                         </constraints>
                         <variation key="default">
@@ -130,7 +156,9 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="bagButton" destination="445-aF-0oA" id="x5x-4k-tMX"/>
                         <outlet property="brandLabel" destination="xSz-KW-PZa" id="iCl-Rf-32k"/>
+                        <outlet property="descTextView" destination="lVj-Ka-vWk" id="HFU-Yq-htQ"/>
                         <outlet property="imagesContentView" destination="rou-vc-84F" id="x4A-Wy-mtv"/>
                         <outlet property="imagesScrollView" destination="2Ep-pK-nnS" id="aeh-lu-0c2"/>
                         <outlet property="spinnerView" destination="TqB-dr-eFw" id="tf3-Jr-js0"/>
