--- a/Example_ProductBrowser/HamburgerMenu.storyboard
+++ b/Example_ProductBrowser/HamburgerMenu.storyboard
@@ -40,14 +40,14 @@
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="dd7-nV-EKE">
                                 <rect key="frame" x="0.0" y="20" width="375" height="50"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xly-5t-ATP">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xly-5t-ATP" customClass="SelectableButton" customModule="Example_ProductBrowser" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="187.5" height="50"/>
                                         <state key="normal" title="Button"/>
                                         <connections>
                                             <action selector="buttonLeftTap:" destination="rmT-Eq-6a9" eventType="touchUpInside" id="etr-GA-DHb"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pHc-tV-hww">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pHc-tV-hww" customClass="SelectableButton" customModule="Example_ProductBrowser" customModuleProvider="target">
                                         <rect key="frame" x="187" y="0.0" width="187.5" height="50"/>
                                         <state key="normal" title="Button"/>
                                         <connections>
